# URL-Shortener

./: .gitignore  README.md  app.py  notes.md  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  config.py  qr_code.py  routes.py  shortener.py
app/static/: style.css
app/templates/: index.html
